# tutos_live

./: CHANGELOG.md  README.md  TODO.md  _sidebar.md  bun.md  bw-env.md  cloudflare.md  gh.md  github-pages.md  glab.md  index.html  m365-cli.md  npm-prefix.md  qmd.md  tailscale.md  tg.md  tools.md  waveterm.md
.agent/: AGENT.md
mcps/: bw-mcp.md  tick-mcp.md  whats-mcp.md
sh/: awk_tutorial.md  globbing_vs_regex.md  kill_tutorial.md  ps_tutorial.md  regex_tutorial.md  sed_tutorial.md  tail_tutorial.md  tee_tutorial.md  xargs_tutorial.md
templates/: README.md  _sidebar.md  config.py  github-pages-index.html  pyproject.toml  waveterm-ai-modes.json  waveterm-widgets.json
